parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr07.wacc
# type mismatch: char <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char c = 1
end
